--- a/index.html
+++ b/index.html
@@ -87,12 +87,35 @@
 			display: flex;
 			justify-content: center;
 			width: 100%;
-			padding: 1rem 0;
+			padding: 1.5rem 0;
+		}
+
+		#nav .links {
+			display: flex;
+			justify-content: center;
+			gap: 3rem;
+			width: 100%;
+			max-width: 1200px;
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			font-size: 1.5rem;
 		}
 
 		#nav .links a {
 			color: var(--slate-blue);
+			font-size: 1.5rem;
+			font-weight: 600;
+			text-decoration: none;
+			padding: 0.5rem 1rem;
+			transition: color 0.3s ease;
 		}
+
+		#nav .links a:hover {
+			color: #64748b;
+		}
+
+
 
 		.content-grid {
 			display: grid;
@@ -256,7 +279,6 @@
 			<ul class="links">
 				<li><a href="#introduction">INTRODUCTION</a></li>
 				<li><a href="#experience">EXPERIENCE</a></li>
-				<li><a href="#education">EDUCATION</a></li>
 				<li><a href="#contact">CONTACT</a></li>
 				<li><a href="#footer">RESUME & LINKS</a></li>
 			</ul>
@@ -280,6 +302,29 @@
 						<img src="images/IMG_2153.jpeg" width="100%" />
 					</div>
 				</div>
+
+				<!-- Personal Introduction -->
+				<h3 class="section-title" style="font-size: 2rem; margin-top: 4rem; margin-bottom: 2rem;">BEYOND THE CODE</h3>
+				<div class="content-grid">
+					<div>
+						<p>When I'm not coding or working on ML projects, I spend my time captaining my soccer team and playing with
+							friends, staying active at the gym, or exploring the outdoors through and driving to recharge .</p>
+					</div>
+					<div class="hobby-photos" style="display: flex; flex-direction: column; gap: 1rem;">
+						<!-- Main large photo -->
+						<div class="image rounded" style="width: 100%; aspect-ratio: 16/9;">
+							<img src="images/IMG_6383.jpg" style="width: 100%; height: 100%; object-fit: cover;" alt="Main Hobby" />
+						</div>
+						<!-- Two smaller photos in a row -->
+						<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
+							<div class="image rounded" style="aspect-ratio: 1/1;">
+								<img src="images/IMG_6913.jpg" style="width: 100%; height: 100%; object-fit: cover;" alt="Hobby 2" />
+							</div>
+							<div class="image rounded" style="aspect-ratio: 1/1;">
+								<img src="images/IMG_6867.jpeg" style="width: 100%; height: 100%; object-fit: cover;" alt="Hobby 3" />
+							</div>
+						</div>
+					</div>
 			</section>
 
 
@@ -355,10 +400,10 @@
 							<h3 style="color: var(--slate-blue); font-size: 1.5rem; margin-bottom: 0.5rem;">Neural Network Framework
 							</h3>
 							<ul style="color: var(--slate-blue); margin-top: 0.5rem; margin-bottom: 0;">
-								I designed custom neural network architectures to analyze video
-								frames of contact lenses within the app, achieving 99% accuracy
-								in frame selection and component identification, streamlining
-								data preparation for doctors.
+								During my internship at Smartlens, followed by the part-time role I was offered, I worked on several
+								solo projects that enabled me to bridge the gap between theory and practice. These projects have allowed
+								me to refine and master the skills I have acquired in school by applying them to real-world challenges,
+								gaining valuable hands-on experience along the way.
 							</ul>
 						</div>
 					</div>
@@ -376,8 +421,11 @@
 							<h3 style="color: var(--slate-blue); font-size: 1.25rem; margin-bottom: 0.5rem;"> Classification
 							</h3>
 							<ul style="color: var(--slate-blue); margin-top: 0.5rem; margin-bottom: 0;">
-								A classification model to determine if a frame is well-aligned, focused, and suitable for
-								analysis.
+								One of the first models I created was a classification model using YOLO v8, which I later updated to
+								YOLO v11. The goal was to determine whether a video frame is well-aligned, focused, and suitable for
+								analysis. I built my own dataset using frames extracted from videos. This process allowed me to gain a
+								deeper understanding of the data preparation pipeline required for building robust classification
+								models.
 							</ul>
 						</div>
 					</div>
@@ -396,8 +444,11 @@
 							<h3 style="color: var(--slate-blue); font-size: 1.25rem; margin-bottom: 0.5rem;"> Segmentation
 							</h3>
 							<ul style="color: var(--slate-blue); margin-top: 0.5rem; margin-bottom: 0;">
-								A segmentation model to locate key components within frames and assess their alignment
-								accuracy.
+								In a later project, I developed a segmentation model to locate key components within video frames and
+								assess their alignment accuracy. I utilized Darwin v7 for dataset preparation and YOLO v8 for
+								segmentation. Using the extracted coordinates, I implemented an XGBoost algorithm to analyze the
+								alignment quality of the frames based on the components' positions. This approach combined precise
+								segmentation with machine learning to evaluate frame suitability effectively.
 							</ul>
 						</div>
 					</div>
@@ -418,7 +469,11 @@
 							<h3 style="color: var(--slate-blue); font-size: 1.25rem; margin-bottom: 0.5rem;"> Regressor
 							</h3>
 							<ul style="color: var(--slate-blue); margin-top: 0.5rem; margin-bottom: 0;">
-								A regressor model to assess the contact lens level and determine the current eye pressure.
+								In my most recent project, I developed a regression model to assess contact lens levels and determine
+								current eye pressure. I utilized a feature extractor to derive meaningful features from preprocessed
+								video frames and built a regressor on top of these features. The dataset was prepared using frames I had
+								previously curated, ensuring high-quality inputs for training the model. This approach enabled accurate
+								predictions by combining feature extraction with regression analysis.
 							</ul>
 						</div>
 					</div>
@@ -430,51 +485,6 @@
 						<div class="image rounded" style="aspect-ratio: 16/9;">
 							<img src="images/ss.jpeg" style="width: 100%; height: 100%; object-fit: cover;" />
 						</div>
-					</div>
-				</div>
-			</section>
-
-			<section id="education" class="main">
-				<h2 class="section-title">EDUCATION</h2>
-				<div class="content-grid" style="align-items: start;">
-					<!-- Left side: Education details -->
-					<div class="education-details">
-						<div class="education-item" style="margin-bottom: 2rem;">
-							<h3 style="color: var(--slate-blue); font-size: 1.5rem; margin-bottom: 0.5rem;">Cornell University</h3>
-							<p style="color: var(--slate-blue); font-size: 1.0rem; margin: 0;">B.S. Computer Science, Minor in
-								ORIE</p>
-							<p style="color: var(--slate-blue); margin: 0;">Ithaca, NY</p>
-							<p style="color: var(--slate-blue); margin: 0;">2023 - 2025 | GPA: 3.9/4.0</p>
-						</div>
-
-						<div class="education-item" style="margin-bottom: 2rem;">
-							<h3 style="color: var(--slate-blue); font-size: 1.5rem; margin-bottom: 0.5rem;">Arizona State University
-							</h3>
-							<p style="color: var(--slate-blue); font-size: 1.0rem; margin: 0;">B.S. Computer Science, Minor in
-								Business</p>
-							<p style="color: var(--slate-blue); margin: 0;">Tempe, AZ</p>
-							<p style="color: var(--slate-blue); margin: 0;">2021 - 2023 | GPA: 4.0/4.0</p>
-						</div>
-
-						<div class="education-item">
-							<h3 style="color: var(--slate-blue); font-size: 1.5rem; margin-bottom: 0.5rem;">Henry M. Gunn High
-								School
-							</h3>
-							<p style="color: var(--slate-blue); font-size: 1.0rem; margin: 0;"> </p>Activities: Business Club,
-							YearBook
-							<p style="color: var(--slate-blue); margin: 0;">Palo Alto, CA</p>
-							<p style="color: var(--slate-blue); margin: 0;">2017 - 2021 | GPA: 3.9/4.0</p>
-						</div>
-					</div>
-
-					<!-- Right side: Logos -->
-					<div style="display: flex; flex-direction: column; gap: 4rem; justify-content: start; align-items: center;">
-						<img src="images/cornell.png" alt="Cornell University Logo"
-							style="min-width: 120px; height: 120px; display: flex; align-items: center; justify-content: center; margin: 0; overflow: hidden;">
-						<img src="images/asu.png" alt="Arizona State University Logo"
-							style="min-width: 120px; height: 120px; display: flex; align-items: center; justify-content: center; margin: 0; overflow: hidden;">
-						<img src="images/gunn.png" alt="Gunn High School Logo"
-							style="min-width: 120px; height: 120px; display: flex; align-items: center; justify-content: center; margin: 0; overflow: hidden;">
 					</div>
 				</div>
 
