updates for privact

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 					</div>
 					<div style="display: flex; align-items: center; justify-content: center;">
 						<div class="image rounded">
-							<img src="images/bestFrame_1241F2EE-9765-4C25-AA96-2807D7A42027.jpg" alt="Neural Network Diagram"
+							<img src="images/bestFrame_1241F2EE-9765-4C25-AA96.jpg" alt="Neural Network Diagram"
 								style="width: 100%; height: auto;" />
 						</div>
 					</div>
@@ -454,8 +454,7 @@
 					</div>
 					<div style="display: flex; align-items: center; justify-content: center;">
 						<div class="rounded-container" style="width: 100%; position: relative; padding-bottom: 56.25%;">
-							<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-								src="https://www.youtube.com/embed/kbY0TZ6QJis" frameborder="0"
+							<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="" frameborder="0"
 								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen>
 							</iframe>
@@ -479,11 +478,10 @@
 					</div>
 					<div style="display: grid; grid-template-rows: 1fr 1fr; gap: 1rem; max-width: 800px; margin: 0 auto;">
 						<div class="image rounded" style="aspect-ratio: 16/9;">
-							<img src="images/bestFrame_1241F2EE-9765-4C25-AA96-2807D7A42027 2.jpg"
-								style="width: 100%; height: 100%; object-fit: cover;" />
+							<img src="" style="width: 100%; height: 100%; object-fit: cover;" />
 						</div>
 						<div class="image rounded" style="aspect-ratio: 16/9;">
-							<img src="images/ss.jpeg" style="width: 100%; height: 100%; object-fit: cover;" />
+							<img src="" style="width: 100%; height: 100%; object-fit: cover;" />
 						</div>
 					</div>
 				</div>
